# zksnark-safety-verificator

./: .gitignore  Cargo.toml  README.md
circom_algebra/src/: algebra.rs  lib.rs  modular_arithmetic.rs  simplification_utils.rs
constant_tracking/src/: lib.rs
test/binsubtest4bit/: circuit_constraints.json  circuit_signals.sym  circuit_treeconstraints.json  inputs.json  output.wtns  witness.json
test/binsubtest4bit/circuit_cpp/: circuit  circuit.cpp
verification/: Cargo.toml
verification/src/: cli.rs  input_data.rs  main.rs  polynomial_system_fixer.rs  tree_constraint_graph_printer.rs  verification_graph.rs  verifier.rs
